# deepracer-custom-car

./: .gitignore  LICENSE  README.md  dev-stack-build.sh  dev-stack-dependencies.sh  versions.json
.devcontainer/: Dockerfile  bashrc
.devcontainer/foxy-amd64/: Dockerfile  devcontainer.json
.devcontainer/humble/: Dockerfile  devcontainer.json
.devcontainer/humble-amd64/: Dockerfile  devcontainer.json
.devcontainer/humble-arm64/: Dockerfile  devcontainer.json
.devcontainer/noble/: Dockerfile  devcontainer.json
build_scripts/: build-core.sh  build-libcamera.sh  build-openvino.sh  build-packages.sh  build-prerequisites-dr.sh  build-prerequisites-humble.sh  clean-packages.sh  delete-packages.sh  list-packages.sh  prepare-dr-build.sh  prepare-pi-build.sh  upload-packages.sh  verify-packages.sh  versions.json
build_scripts/files/common/: aws-deepracer-core-conffiles  aws-deepracer-core-postinst  aws-deepracer-core-prerm  aws-deepracer-util-conffiles  deepracer-core.service  deepracer_launcher.py  logging.conf  nginx.default  nginx_configure.sh  nginx_install_certs.sh  ros-jazzy-libcamera-control  start_ros.sh
build_scripts/files/common/error/: 500.html
build_scripts/files/pi/: aws-deepracer-core-postinst
build_scripts/patches/: aws-deepracer-camera-pkg.patch  aws-deepracer-ctrl-pkg.patch  aws-deepracer-i2c-pkg.rpi.patch  aws-deepracer-inference-pkg.patch  aws-deepracer-model-optimizer-pkg.rpi.patch  aws-deepracer-sensor-fusion-pkg.patch  aws-deepracer-sensor-fusion-pkg.rpi.patch  aws-deepracer-servo-pkg.patch  aws-deepracer-servo-pkg.rpi.patch  aws-deepracer-status-led-pkg.patch  aws-deepracer-status-led-pkg.rpi.patch  aws-deepracer-systems-pkg.patch  aws-deepracer-systems-pkg.rpi.patch  aws-deepracer-webserver-pkg.patch
docs/: apt.md  build_sw.md  camera.md  raspberry_pi.md  ros_data_flow_diagram.md  ros_service_call_diagram.md
drawings/: PiMount v1.3-Front.stl  PiMount v1.3.1.FCStd
inference_pkg/: CMakeLists.txt
inference_pkg/src/: tflite_inference_eng.cpp
install/aws-20.04/: install-deepracer.sh
install_scripts/aws-20.04/: aws_deepracer-community.list  install-deepracer.sh  install-local.sh  install-prerequisites.sh
install_scripts/common/: deepracer-community.asc
install_scripts/rpi-24.04/: aws_deepracer-community.list  install-deepracer.sh  install-local.sh  install-prerequisites.sh  rc.local
install_scripts/rpi4-22.04/: aws_deepracer-community.list  install-deepracer.sh  install-prerequisites.sh  rc.local
install_scripts/rpi5-24.04/: aws_deepracer-community.list  install-deepracer.sh  install-prerequisites.sh  rc.local
scripts/: dev-stack-package.sh
src/: .rosinstall-core  .rosinstall-dr  .rosinstall-foxy  .rosinstall-humble  README.md
src/aws-deepracer-camera-pkg/camera_pkg/: CMakeLists.txt
src/aws-deepracer-camera-pkg/camera_pkg/src/: camera_node.cpp
src/aws-deepracer-ctrl-pkg/ctrl_pkg/: CMakeLists.txt
src/aws-deepracer-ctrl-pkg/ctrl_pkg/include/ctrl_pkg/: ctrl_state.hpp
src/aws-deepracer-ctrl-pkg/ctrl_pkg/src/: ctrl_node.cpp  ctrl_state.cpp
src/aws-deepracer-device-info-pkg/device_info_pkg/: package.xml  setup.cfg  setup.py
src/aws-deepracer-device-info-pkg/device_info_pkg/device_info_pkg/: constants.py  device_info_node.py  device_status_node.py  ring_buffer.py
src/aws-deepracer-i2c-pkg/i2c_pkg/: CMakeLists.txt
src/aws-deepracer-i2c-pkg/i2c_pkg/src/: battery_dummy_node.cpp  battery_node.cpp
src/aws-deepracer-inference-pkg/inference_pkg/: CMakeLists.txt  package.xml
src/aws-deepracer-inference-pkg/inference_pkg/include/inference_pkg/: image_process.hpp
src/aws-deepracer-inference-pkg/inference_pkg/src/: inference_node.cpp  tflite_inference_eng.cpp
src/aws-deepracer-interfaces-pkg/deepracer_interfaces_pkg/: CMakeLists.txt
src/aws-deepracer-interfaces-pkg/deepracer_interfaces_pkg/msg/: DeviceStatusMsg.msg  LatencyMeasure.msg  LatencyMeasureMsg.msg  ServoCtrlMsg.msg
src/aws-deepracer-interfaces-pkg/deepracer_interfaces_pkg/srv/: GetDeviceInfoSrv.srv  GetDeviceStatusSrv.srv
src/aws-deepracer-launcher/deepracer_launcher/launch/: deepracer_launcher.py
src/aws-deepracer-model-optimizer-pkg/model_optimizer_pkg/model_optimizer_pkg/: constants.py  model_optimizer_node.py
src/aws-deepracer-navigation-pkg/deepracer_navigation_pkg/: CMakeLists.txt  package.xml  setup.cfg
src/aws-deepracer-navigation-pkg/deepracer_navigation_pkg/deepracer_navigation_pkg/: deepracer_navigation_node.py
src/aws-deepracer-navigation-pkg/deepracer_navigation_pkg/include/deepracer_navigation_pkg/: deepracer_navigation_node.hpp
src/aws-deepracer-navigation-pkg/deepracer_navigation_pkg/launch/: deepracer_navigation_cpp.launch.py
src/aws-deepracer-navigation-pkg/deepracer_navigation_pkg/src/: deepracer_navigation_node.cpp  main.cpp
src/aws-deepracer-sensor-fusion-pkg/sensor_fusion_pkg/: CMakeLists.txt
src/aws-deepracer-sensor-fusion-pkg/sensor_fusion_pkg/src/: sensor_fusion_node.cpp
src/aws-deepracer-servo-pkg/servo_pkg/: CMakeLists.txt
src/aws-deepracer-servo-pkg/servo_pkg/src/: pwm.cpp  servo_mgr.cpp  servo_node.cpp
src/aws-deepracer-status-led-pkg/status_led_pkg/: setup.cfg
src/aws-deepracer-status-led-pkg/status_led_pkg/status_led_pkg/: constants.py  gpiod_module.py  led_control.py  status_led_node.py
src/aws-deepracer-systems-pkg/deepracer_systems_pkg/: package.xml  setup.cfg  setup.py
src/aws-deepracer-systems-pkg/deepracer_systems_pkg/launch/: deepracer_systems_pkg_launch.py
src/aws-deepracer-usb-monitor-pkg/usb_monitor_pkg/: setup.cfg
src/aws-deepracer-usb-monitor-pkg/usb_monitor_pkg/usb_monitor_pkg/: usb_monitor_node.py
src/aws-deepracer-webserver-pkg/webserver_pkg/: setup.cfg
src/aws-deepracer-webserver-pkg/webserver_pkg/webserver_pkg/: constants.py  device_info_api.py  login.py  software_update.py  ssh_api.py  utility.py  vehicle_control.py  webserver.py  webserver_publisher_node.py  wifi_settings.py
utils/: README.md  fix_ros.sh  usb-build.ps1  usb-build.ubuntu.sh
utils/custom_image/:  INSTRUCTIONS.md  INSTRUCTIONS.md  adjust_image.sh  analyze_repos.sh  pepare.sh
(+11 files in other folders)
